--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "latest",
+    "@hookform/resolvers": "5.2.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -41,26 +41,26 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "latest",
+    "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.4.10",
+    "next": "15.5.10",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
-    "react-hook-form": "latest",
+    "react-hook-form": "7.70.0",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "recharts": "3.6.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "@vercel/kv": "latest",
-    "ai": "latest",
-    "@ai-sdk/openai": "latest"
+    "zod": "4.3.5",
+    "@vercel/kv": "3.0.0",
+    "ai": "6.0.27",
+    "@ai-sdk/openai": "3.0.7"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -69,5 +69,13 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "glob": ">=10.5.0",
+      "minimatch": ">=10.2.1",
+      "brace-expansion": ">=2.0.2",
+      "postcss": ">=8.4.31"
+    }
   }
 }
